--- a/src/app/dialog-admin/dialog-admin.component.html
+++ b/src/app/dialog-admin/dialog-admin.component.html
@@ -11,5 +11,8 @@
 </div>
 <!--Boutons-->
 <div mat-dialog-action [align]="'end'">
-    <button style="background-color: #4F3E3E;color: white;" mat-raised-button color="accent" [disabled]="!adminForm.dirty || !adminForm.valid" (click)="admin()">Administrer</button>
+    <button style="background-color: #4F3E3E;color: white;" mat-raised-button color="accent" (click)="admin()">Administrer</button>
+</div>
+<div mat-dialog-action [align]="'end'">
+    <button style="background-color: #4F3E3E;color: white;" mat-raised-button color="accent" routerLink="/admin">Panneau d'administration</button>
 </div>
